<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">PPMT</string>
	<string name="app_subtitle">Pāli Platform Meditation Timer</string>
	<string name="quit">Quit</string>
	<string name="reset">Reset</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="timer">Timer</string>
	<string name="live">Live</string>
	<string name="start">START</string>
	<string name="pause">PAUSE</string>
	<string name="resume">RESUME</string>

	<string name="interval_title">Interval time</string>
	<string name="interval_dialog_title">Interval time to use:</string>
	<string name="repeat_title">Repeat</string>
	<string name="repeat_dialog_title">Number of repeat:</string>
	<string name="sound_title">Sound</string>
	<string name="sound_dialog_title">Sound to use:</string>
	<string name="ending_bell_title">Ending bell</string>
	<string name="ending_bell_dialog_title">Ending bell to use:</string>
	<string name="click_title">Leading clicks</string>
	<string name="click_dialog_title">Leading clicks to use:</string>
	<string name="preparation_title">Preparation</string>
	<string name="preparation_dialog_title">Preparation to use:</string>
	<string name="keepscreenon_title">Keep screen on</string>
	<string name="keepscreenon_summ_yes">Stay awake during the session</string>
	<string name="keepscreenon_summ_no">Use the system\'s sleep setting</string>

	<string name="bell_tiny">Tiny bell</string>
	<string name="bell_small">Small bell</string>
	<string name="bell_large">Large bell</string>

	<string name="tts_prepare">The session started.</string>
	<string name="tts_loop">Minutes passed.</string>
	<string name="tts_last">The session ended.</string>

	<string name="noti_message">Meditation timer is running</string>

	<string-array name="interval_times_entries">
		<item>1 minute</item>
		<item>5 minutes</item>
		<item>10 minutes</item>
		<item>15 minutes</item>
		<item>20 minutes</item>
	</string-array>
	<string-array name="interval_times_values">
		<item>1</item>
		<item>5</item>
		<item>10</item>
		<item>15</item>
		<item>20</item>
	</string-array>

	<string-array name="repeat_times_entries">
		<item>Once</item>
		<item>Twice</item>
		<item>3 times</item>
		<item>4 times</item>
		<item>5 times</item>
		<item>6 times</item>
		<item>7 times</item>
		<item>8 times</item>
		<item>9 times</item>
		<item>10 times</item>
		<item>11 times</item>
		<item>12 times</item>
	</string-array>
	<string-array name="repeat_times_values">
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
		<item>8</item>
		<item>9</item>
		<item>10</item>
		<item>11</item>
		<item>12</item>
	</string-array>

	<string-array name="sound_entries">
		<item>No alarm, just clicks</item>
		<item>Tiny bell</item>
		<item>Small bell</item>
		<item>Large bell</item>
		<item>Voice</item>
	</string-array>
	<string-array name="sound_values">
		<item>no</item>
		<item>tiny</item>
		<item>small</item>
		<item>large</item>
		<item>tts</item>
	</string-array>

	<string-array name="ending_bell_entries">
		<item>Normal</item>
		<item>Tiny bell</item>
		<item>Small bell</item>
		<item>Large bell</item>
	</string-array>
	<string-array name="ending_bell_values">
		<item>no</item>
		<item>tiny</item>
		<item>small</item>
		<item>large</item>
	</string-array>

	<string-array name="click_entries">
		<item>One click each</item>
		<item>All one but the last three</item>
		<item>2 clicks at most</item>
		<item>3 clicks at most</item>
		<item>4 clicks at most</item>
		<item>5 clicks at most</item>
		<item>6 clicks at most</item>
	</string-array>
	<string-array name="click_values">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
	</string-array>

	<string-array name="preparation_entries">
		<item>3 seconds</item>
		<item>10 seconds with a click</item>
		<item>10 seconds with a melody</item>
		<item>20 seconds with a gong</item>
	</string-array>
	<string-array name="preparation_values">
		<item>no</item>
		<item>click</item>
		<item>melody</item>
		<item>gong</item>
	</string-array>

	<string name="about_text">
		<b>Pāli Platform Meditation Timer</b> 1.3.2\n
		<small>Licensed under the Apache License, Version 2.0</small>\n
		\n
		<i>A minimalist but usable med-timer</i>\n
		<small>• Only core Android library is used, up to API level 19\n
		• Android 4.4 is the minimum requirement\n
		• The program should also work in modern Androids\n
		• If necessary, the app\'s restriction has to be disabled or running in background has to be allowed\n
		• If anything fails, please keep the screen on\n
		\n
		<b>Simple uses:</b>\n
		• Go to Settings\n
		• Select an interval between 1-20 minutes\n
		• Select a repeat up to 12 times\n
		• Select an alarm either bells or voice or none\n
		• Select the ending bell to use, if needed\n
		• Select a pattern of leading clicks\n
		• Select a preparation to use\n
		• Select if the device is kept awake\n
		• Go to Timer and press START\n
		• The session can be paused and resumed\n
		• Press the reset button to cancel the session\n
		• The settings are saved for the next use\n
		• Long press the reset button to restore the default settings\n
		• Use Live mode to arbitrarily ring bells\n
		</small>
		\n
		Copyright © 2023 J.R. Bhaddacak \n
		<small>See further at <b><i>https://bhaddacak.github.io/ppmt</i></b></small>
		\n
	</string>

</resources>
