<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<ListPreference
		android:key="pref_interval"
		android:title="@string/interval_title"
		android:dialogTitle="@string/interval_dialog_title"
		android:entries="@array/interval_times_entries"
		android:entryValues="@array/interval_times_values"
		android:defaultValue="15" />
	<ListPreference
		android:key="pref_repeat"
		android:title="@string/repeat_title"
		android:dialogTitle="@string/repeat_dialog_title"
		android:entries="@array/repeat_times_entries"
		android:entryValues="@array/repeat_times_values"
		android:defaultValue="2" />
	<ListPreference
		android:key="pref_sound"
		android:title="@string/sound_title"
		android:dialogTitle="@string/sound_dialog_title"
		android:entries="@array/sound_entries"
		android:entryValues="@array/sound_values"
		android:defaultValue="small" />
	<ListPreference
		android:key="pref_click"
		android:title="@string/click_title"
		android:dialogTitle="@string/click_dialog_title"
		android:entries="@array/click_entries"
		android:entryValues="@array/click_values"
		android:defaultValue="1" />
	<CheckBoxPreference
		android:key="pref_preparation"
		android:title="@string/preparation_title"
		android:defaultValue="true" />
	<CheckBoxPreference
		android:key="pref_keepscreenon"
		android:title="@string/keepscreenon_title"
		android:defaultValue="false" />
</PreferenceScreen>
