<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	<LinearLayout
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<RadioGroup android:id="@+id/radiogroup_bell_size"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/border"
			android:orientation="vertical">
			<RadioButton android:id="@+id/radio_bell_tiny"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/bell_tiny"
				android:onClick="onBellSizeClicked" />
			<RadioButton android:id="@+id/radio_bell_small"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/bell_small"
				android:onClick="onBellSizeClicked" />
			<RadioButton android:id="@+id/radio_bell_large"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/bell_large"
				android:onClick="onBellSizeClicked" />
		</RadioGroup>
	</LinearLayout>
	<ImageButton
		android:layout_centerInParent="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:onClick="chime"
		style="?android:attr/borderlessButtonStyle"
		android:src="@drawable/bell" />
</RelativeLayout>
